feat: replaces PictureBoxes with one Custom Panel to draw all images

--- a/ParagonPioneers.csproj
+++ b/ParagonPioneers.csproj
@@ -61,6 +61,9 @@
     <Compile Include="Map.Designer.cs">
       <DependentUpon>Map.cs</DependentUpon>
     </Compile>
+    <Compile Include="MapPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ImportMenu.resx">
