--- a/ParagonPioneers.csproj
+++ b/ParagonPioneers.csproj
@@ -66,6 +66,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tile.cs" />
     <EmbeddedResource Include="ImportMenu.resx">
       <DependentUpon>ImportMenu.cs</DependentUpon>
     </EmbeddedResource>
