--- a/ParagonPioneers.csproj
+++ b/ParagonPioneers.csproj
@@ -64,6 +64,9 @@
     <Compile Include="MapPanel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="MessageBoxWithCheckbox.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tile.cs" />
